--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,5 +5,5 @@ management.context-path=/ra
 sample=foo
 
 
-#spring.cache.type=infinispan
-#spring.cache.infinispan.config=infinispan.xml
+spring.cache.type=infinispan
+spring.cache.infinispan.config=infinispan.xml
